idea/testData/checker/diagnosticsMessage/fullPackageFQNameOnVisiblityError.fir.kt
// WITH_RUNTIME

package a.b

<error descr="[INVISIBLE_REFERENCE] Symbol kotlin/internal/InlineOnly.InlineOnly is invisible">@kotlin.internal.InlineOnly</error>
inline fun foo() {}
